# MachineLearningZoomcamp2025

./: .gitignore  README.md  pyproject.toml
01-intro/: Introduction_to_numpy.ipynb  homework.ipynb  pandas.ipynb
02-regression/: homework.ipynb
03-classification/: 03-churn.ipynb  homework.ipynb
04-evaluation/: homework.ipynb
05-deployment/: 05-train-churn-model.ipynb  Dockerfile  homework.ipynb  homework.py  train.py
